fix: FCM 깃허브 분석 완료 메시지 메타데이터, 분석 조회할 때 repository id 배열 반환